--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Start of custom .gitignore files
+.vscode/
+# End of custom .gitignore files
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
